# SharpSense

./: README.md
SharpSense/: CMakeLists.txt  README.md
SharpSense/inc/core/: LOLClientService.h  StructType.h
SharpSense/inc/ui/: MatchHistoryPage.h  TopBarWidget.h  mainwindow.h
SharpSense/scripts/: test_lcu.py
SharpSense/src/core/: LOLClientService.cpp
SharpSense/src/ui/: MatchHistoryPage.cpp  mainwindow.cpp
